Login implemented, moving bug fixed - overflow scroll, logo changed.

--- a/client/src/components/Blog/Blog.css
+++ b/client/src/components/Blog/Blog.css
@@ -1,10 +1,9 @@
 .blog-article {
     display: flex;
     align-items: center;
-    padding: 10px 10px 10px 0;
-    margin: 10px 10px 10px 0;
     height: 150px;
     cursor: pointer;
+    padding: 20px 0 20px 0;
 }
 
 .blog-article-content {
